# steam-games-analysis

./: .gitignore  CONTRIBUTING.md  Makefile  PROJECT_PLAN.md  README.md  TEST_GUIDE.md
.github/: copilot-instructions.md
backend/: alembic.ini  pyproject.toml  test_pipeline.py
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/analysis/: __init__.py  did_model.py  elasticity.py  survival.py  utils.py
backend/app/api/: analytics.py  dashboard.py  games.py  ingestion.py  router.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/db/repositories/: __init__.py  analysis_repo.py  dashboard_repo.py  game_repo.py
backend/app/ingestion/: base_scraper.py  loader.py  merger.py  steam_store_client.py  steamcharts_scraper.py  steamspy_client.py
backend/app/schemas/: __init__.py  analytics.py  dashboard.py  game.py  ingestion.py
backend/tests/: conftest.py
backend/tests/test_analysis/: test_did_model.py  test_elasticity.py  test_survival.py  test_utils.py
backend/tests/test_api/: test_basic.py
configs/: .env.example  logging.yaml
docker/: backend.Dockerfile  docker-compose.override.yml  docker-compose.yml
docker/postgres/: init.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/cards/: KPICard.tsx
frontend/src/components/layout/: Header.tsx  (+2 more)
frontend/src/hooks/: useAnalytics.ts
frontend/src/pages/: CausalAnalysis.tsx  Dashboard.tsx  DataStatus.tsx  GameDetail.tsx  Games.tsx  SurvivalAnalysis.tsx
scripts/: validate_schema.py
